refactor: Changed commonjs to esmodules
Changed the type of module system from commonjs to esmodules and adaptd import export on modules

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web crarwler to site globalpetrolprices",
   "main": "index.js",
   "author": "Iván Sánchez <sanchez.diaz.ivan@gmail.com>",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
+  "type": "module",
   "private": false,
   "scripts": {
     "start": "node src/index.js",
