--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "node": ">=16.13.1"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "cheerio": "^1.0.0-rc.10",
     "commander": "^9.4.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "jsdom": "^20.0.0",
+    "node-fetch": "^3.2.10"
   },
   "devDependencies": {
+    "jest": "^28.1.3",
     "standard": "^17.0.0"
   }
 }
